# pmake

./: CMakeLists.txt  Makefile  README.md  pmake.makefile  pmake.pmake
include/: debug.h  manpage.h  parse.h  version.h
scripts/: install.cmd  install.sh  set_workspace.cmd  set_workspace.sh
src/: manpage.c  parse.c  pmake.c
